# Potato_shape_analysis

./: CMakeLists.txt  main.cpp
